<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context="com.example.android.programmercoffeecounter.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_your_coffee"
            android:textSize="25sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    style="@style/buttonStyle"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeePoints"
                    android:tag="2"
                    android:text="@string/esspresso" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:onClick="addCoffeePoints"
                    android:tag="1"
                    android:text="@string/cappuccino" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:onClick="addCoffeePoints"
                    android:tag="4"
                    android:text="@string/doppio" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:onClick="addCoffeePoints"
                    android:tag="1"
                    android:text="@string/americano" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:onClick="addCoffeePoints"
                    android:tag="6"
                    android:text="@string/tripplo" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addCoffeePoints"
                    style="@style/buttonStyle"
                    android:tag="-1"
                    android:text="@string/decaf" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"
            android:background="#666666" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/how_many_lines_of_code_you_ve_wrote"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:onClick="addLinesOfCode"
                android:tag="-10"
                android:text="-10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:onClick="addLinesOfCode"
                android:tag="-50"
                android:text="-50" />

            <Button
                android:layout_width="wrap_content"
                style="@style/buttonStyle"
                android:layout_height="wrap_content"
                android:onClick="addLinesOfCode"
                android:tag="-100"
                android:text="-100" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addLinesOfCode"
                style="@style/buttonStyle"
                android:tag="-500"
                android:text="-500" />

        </LinearLayout>

        <TextView
            android:id="@+id/lines_of_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                style="@style/buttonStyle"
                android:layout_height="wrap_content"
                android:onClick="addLinesOfCode"
                android:tag="+10"
                android:text="+10" />

            <Button
                android:layout_width="wrap_content"
                style="@style/buttonStyle"
                android:layout_height="wrap_content"
                android:onClick="addLinesOfCode"
                android:tag="+50"
                android:text="+50" />

            <Button
                android:layout_width="wrap_content"
                style="@style/buttonStyle"
                android:layout_height="wrap_content"
                android:onClick="addLinesOfCode"
                android:tag="+100"
                android:text="+100" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:onClick="addLinesOfCode"
                android:tag="+500"
                android:text="+500" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"
            android:background="#666666" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_have"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/coffee_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="0"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee_points"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_efficiency_is"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/efficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="0"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lines_of_code_per_esspresso"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"
            android:background="#666666" />

        <Button
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="reset"
            android:text="@string/start_a_new_project"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>